Fixed image on mobile finally

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,7 +9,8 @@ body {
 }
 img {
     height: 100%;
-    object-fit: cover;
+    max-width: 100%;
+    object-fit: contain;
 }
 p {
     position: absolute;
